--- a/create-react-app/package.json
+++ b/create-react-app/package.json
@@ -3,11 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "abortcontroller-polyfill": "^1.1.8",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-scripts": "1.1.0",
-    "unfetch": "^3.0.0"
+    "abortcontroller-polyfill": "^1.2.1",
+    "react": "^16.6.3",
+    "react-dom": "^16.6.3",
+    "react-scripts": "^2.1.1",
+    "unfetch": "^4.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
