--- a/node/package.json
+++ b/node/package.json
@@ -4,13 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo This is fine."
   },
   "keywords": [],
   "author": "Martin Olsson <martin@minimum.se> (https://mo.github.io)",
   "license": "ISC",
   "dependencies": {
-    "abortcontroller-polyfill": "^1.2.5",
+    "abortcontroller-polyfill": "^1.2.9",
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "node-fetch": "^2.3.0"
